# SullyEngine

./: CMakeLists.txt
Sully-core/: main.cpp
Sully-core/src/graphics/: window.cpp  window.h
